# magma

./: .gitignore
benchmarks/: README.md  equipments.md  mos_score.py  mptcp.md  parse_sip.py  tune-mptcp.sh
benchmarks/ho_proxy/: Makefile  README.md  app.py  collect_container_logs.sh  dump_call.exp  dump_cull.exp  ho.py  launch_sip_client.sh  mptcp_1.csv  mptcp_1.txt  mptcp_1.xlsx  ovs_handover.py  parse_iperf.py  parse_iperf_line.py  proxy.py  run_emulation.py  run_output.txt  set_test_mode.sh  sim.py  tcp_1.csv  tcp_1.txt  tcp_1.xlsx
benchmarks/ho_proxy/QCSuper/modules/: pcap_dump.py
broker/cloud/: Makefile  brokerd.py
broker/cloud/go/: Makefile
broker/cloud/python/: brokerd.py  brokerd_servicer.py
broker/cloud/python/magma/subd/: Makefile
broker/gateway/: Makefile  broker_proxy.py
broker/protos/: brokerd.proto  common.proto
key_files/: ut_rsa_pub.pem
lte/cloud/configs/: bt.mconfig  magmad.yml  service_registry.yml
lte/cloud/python/: Makefile  defs.mk  python.mk  setup.py
lte/cloud/python/magma/brokerd/: brokerd_servicer.py  main.py
lte/cloud/python/magma/common/: service.py  service_registry.py
lte/cloud/python/magma/configuration/: mconfig_managers.py  service_configs.py
lte/cloud/python/magma/subscriberdb/: processor.py
lte/gateway/: .env  .env_template  Vagrantfile  ec2.ini  ec2.py  patches.rb
lte/gateway/c/oai/: CMakeLists.txt
lte/gateway/c/oai/common/: common_types.h  itti_free_defined_msg.c  security_types.h
lte/gateway/c/oai/include/: broker_messages_def.h  broker_messages_types.h  messages_def.h
lte/gateway/c/oai/lib/: CMakeLists.txt
lte/gateway/c/oai/lib/broker_proxy/: CMakeLists.txt  brokerClient.cpp  brokerClient.h  broker_client_api.cpp  broker_client_api.h  itti_msg_to_proto_msg.cpp  itti_msg_to_proto_msg.h  proto_msg_to_itti_msg.cpp  proto_msg_to_itti_msg.h
lte/gateway/c/oai/lib/subscriber_proxy/: CMakeLists.txt  SubscriberClient.cpp  SubscriberClient.h  subscriber_client_api.cpp  subscriber_client_api.h
lte/gateway/configs/: magmad.yml  service_registry.yml  subscriberdb.yml
lte/gateway/deploy/: hosts  magma_aws.yml  magma_test_aws.yml  magma_trfserver_aws.yml
lte/gateway/python/: Makefile  defs.mk  setup.py
lte/gateway/python/integ_tests/: Makefile  defs.mk  sub_config.py
lte/gateway/python/integ_tests/gateway/: rpc.py
lte/gateway/python/integ_tests/s1aptests/: s1ap_utils.py  (+1 more)
lte/protos/mconfig/: mconfigs.proto
orc8r/cloud/: Makefile
orc8r/cloud/docker/: build.py
orc8r/cloud/docker/controller/: Dockerfile  supervisord.conf
orc8r/gateway/c/common/: CMakeProtoMacros.txt
orc8r/tools/fab/: dev_utils.py
orc8r/tools/packer/: magma-4.9.0-9.json
orc8r/tools/packer/scripts/: setup_grub.sh
(+74 files in other folders)
